# ruin_theory

./: .gitignore  README.md  pyproject.toml
docs/: features.md  references.md  reproduce_r_actuar_package.md
examples/: barrier_dividends.py  climate_change_ruin.py  finite_discrete_time_castaner.py  finite_time_discrete_ruin.py  gerber_shiu_diagnostics.py  inar_binar_byclaim_examples.py  infinite_mean_regular_variation.py  markov_modulated_common_shocks.py  matrix_analytic_prevention.py  multirisk_dividend_penalties.py  quickstart.py  r_actuar_package_python.py  red_time_allocation.py  reproduce_r_actuar_package.py
src/ruin_theory/: __init__.py  aggregate.py  climate_change.py  distributions.py  dividends.py  finite_discrete.py  finite_discrete_time.py  formulas.py  gerber_shiu.py  integer_byclaims.py  interest.py  losses.py  markov_modulated.py  matrix_analytic.py  models.py  multirisk_dividends.py  plotting.py  prevention.py  red_time.py  regular_variation.py  renewal.py  results.py  simulation.py
tests/: test_aggregate.py  test_climate_change.py  test_distributions_models.py  test_dividends.py  test_finite_discrete.py  test_finite_discrete_time.py  test_formulas.py  test_gerber_shiu.py  test_integer_byclaims.py  test_interest.py  test_loss_utilities.py  test_markov_modulated.py  test_matrix_analytic.py  test_multirisk_dividends.py  test_plotting.py  test_prevention_optimization.py  test_public_api.py  test_red_time.py  test_reference_actuar_examples.py  test_regular_variation.py  test_ruin_numerical.py  test_simulation.py
